<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/match_parent"
    android:layout_height="@dimen/wrap_content"
    android:background="#FFFFFF"
    tools:context="com.example.android.helloandroid.HelloAndroid">

    <LinearLayout
        android:layout_width="@dimen/match_parent"
        android:layout_height="@dimen/wrap_content"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/udacitylogo"
            android:id="@drawable/udacityflyingcar"
            android:layout_width="@dimen/wrap_content"
            android:layout_height="@dimen/heightimage1"
            android:scaleType="centerCrop"
            android:src="@drawable/udacityflyingcar" />

        <TextView
            android:id="@+id/udacity"
            style="@style/Styletext"
            android:layout_width="@dimen/match_parent"
            android:layout_height="@dimen/match_parent"
            android:padding="@dimen/textview_padding"
            android:text="@string/udacity"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/font_size"
             />

        <LinearLayout
            android:layout_width="@dimen/wrap_content"
            android:layout_height="@dimen/wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@drawable/iclocation"
                style="@style/Styleicon"
                android:layout_width="@dimen/match_parent"
                android:layout_height="@dimen/match_parent"
                android:src="@drawable/iclocation"
                />

            <TextView
                android:id="@+id/address"
                style="@style/Styletext"
                android:layout_width="@dimen/match_parent"
                android:layout_height="@dimen/match_parent"
                android:padding="@dimen/textview_padding"
                android:text="@string/address"
                android:textSize="@dimen/font_size"
                 />

        </LinearLayout>


        <LinearLayout
            android:layout_width="@dimen/wrap_content"
            android:layout_height="@dimen/wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@drawable/icphone"
                style="@style/Styleicon"
                android:layout_width="@dimen/match_parent"
                android:layout_height="@dimen/match_parent"
                android:src="@drawable/icphone" />

            <TextView
                android:id="@+id/number"
                style="@style/Styletext"
                android:layout_width="@dimen/match_parent"
                android:layout_height="@dimen/match_parent"
                android:padding="@dimen/textview_padding"
                android:text="@string/number"
                android:autoLink="all"
                android:textSize="@dimen/font_size" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/wrap_content"
        android:layout_height="@dimen/wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@drawable/icweb"
            style="@style/Styleicon"
            android:layout_width="@dimen/match_parent"
            android:layout_height="@dimen/match_parent"
            android:src="@drawable/icweb" />

        <TextView
            android:id="@+id/website"
            style="@style/Styletext"
            android:layout_width="@dimen/match_parent"
            android:layout_height="@dimen/match_parent"
            android:padding="@dimen/textview_padding"
            android:text="@string/website"
            android:autoLink="all"
            android:textColorLink="@android:color/holo_blue_light"
            android:textSize="@dimen/font_size" />

    </LinearLayout>

        <ImageView
            android:id="@drawable/udacityflyingcar"
            android:layout_width="@dimen/match_parent"
            android:layout_height="@dimen/heightimage2"
            android:contentDescription="@string/udacitylogo"
            android:src="@drawable/udacitylogo" />


    </LinearLayout>

</ScrollView>